# poly

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  config.toml.example  will_search.json
docs/: demo.tape  gen_screenshot.py
scripts/: gen_airports.py
src/: auth.rs  client.rs  db.rs  display.rs  error.rs  forecast.rs  lib.rs  main.rs  persist.rs  setup.rs  types.rs  weather.rs
src/tui/: events.rs  keys.rs  mod.rs  state.rs  tasks.rs  theme.rs  ui.rs
src/tui/screens/: analytics.rs  balance.rs  detail.rs  markets.rs  order.rs  positions.rs  setup.rs  util.rs  viewer.rs
src/tui/widgets/: order_book.rs  status_bar.rs  tab_bar.rs
src/weather/: airports.rs  location.rs
tests/: auth_tests.rs  cli_integration_tests.rs  client_tests.rs  db_tests.rs  persist_tests.rs  setup_tests.rs  signing_tests.rs  ws_tests.rs
tests/fixtures/: event_with_markets.json  markets_page.json  order_book.json  positions.json  search_results.json  single_market.json
