[package]
name = "poly"
version = "0.1.0"
edition = "2021"
description = "Universal Polymarket CLI trading tool"

[[bin]]
name = "poly"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Blockchain / EIP-712 signing
ethers = { version = "2.0", features = ["abigen", "rustls"] }

# CLOB HMAC auth
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
rand = "0.8"
hex = "0.4"

# Terminal output
colored = "2"
