[package]
name = "poly"
version = "0.3.0"
edition = "2021"
description = "Universal Polymarket CLI trading tool"
license = "MIT"
repository = "https://gitlab.com/maxweilbuchner/poly-v2"
homepage = "https://gitlab.com/maxweilbuchner/poly-v2"
authors = ["Maximilian Weilbuchner"]
readme = "README.md"
keywords = ["polymarket", "trading", "cli", "tui", "prediction-markets"]
categories = ["command-line-utilities", "finance"]

[lib]
name = "poly"
path = "src/lib.rs"

[[bin]]
name = "poly"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Blockchain / EIP-712 signing
ethers = { version = "2.0", features = ["abigen", "rustls"] }

# CLOB HMAC auth
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Utilities
dotenvy = "0.15"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
rand = "0.8"
hex = "0.4"
rpassword = "7"

# Terminal output
colored = "2"

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TUI
ratatui = { version = "0.27", features = ["crossterm"] }
crossterm = "0.27"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
